--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
+    {# <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet"> #}
 
     <!-- Css Styles -->
     <link href={{ asset('css/bootstrap.min.css') }} rel="stylesheet">
@@ -87,7 +87,7 @@
                 <div class="col-lg-12">
                     <div class="footer__copyright">
                         <div class="footer__copyright__text"><p>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> AgroExchange Tous droits réservés | By Winpreneur.</p></div>
+Copyright &copy;2022</script> AgroExchange Tous droits réservés | By Winpreneur.</p></div>
                         <div class="footer__copyright__payment"><img src={{ asset('img/payment-item.png') }} alt=""></div>
                     </div>
                 </div>
