--- a/templates/headerConsumer.html.twig
+++ b/templates/headerConsumer.html.twig
@@ -18,15 +18,7 @@
         </div>
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
-                <li class="active"><a href="{{path('producer-products')}}">Accueil</a></li>
-                <li><a href="#">Produits </a>
-                    <ul class="header__menu__dropdown">
-                        <li><a href="{{ path('producer-add-product') }}">Ajouter</a></li>
-                        <li><a href="./shop-details.html">Valides</a></li>
-                        <li><a href="./shoping-cart.html">En attente</a></li>
-                        <li><a href="./checkout.html">Supprimés</a></li>
-                    </ul>
-                </li>
+                <li class="active"><a href="{{path('consumer-products')}}">Accueil</a></li>
                 <li><a href="#">Commandes </a>
                     <ul class="header__menu__dropdown">
                         <li><a href="./shop-details.html">Terminées</a></li>
@@ -94,16 +86,7 @@
                 <div class="col-lg-6">
                     <nav class="header__menu">
                         <ul>
-                            <li class="active"><a href="{{path('producer-products')}}">Accueil</a></li>
-                            <li><a href="#">Produits 
-                                <span class="arrow_carrot-down"></span></a>
-                                <ul class="header__menu__dropdown">
-                                    <li><a href="{{ path('producer-add-product') }}">Ajouter</a></li>
-                                    <li><a href="">Valides</a></li>
-                                    <li><a href="">En attente</a></li>
-                                    <li><a href="">Supprimés</a></li>
-                                </ul>
-                            </li>
+                            <li class="active"><a href="{{path('consumer-products')}}">Accueil</a></li>
                             <li><a href="#">Commandes 
                                 <span class="arrow_carrot-down"></span></a>
                                 <ul class="header__menu__dropdown">
