--- a/templates/producer/addProduct.html.twig
+++ b/templates/producer/addProduct.html.twig
@@ -120,7 +120,11 @@
                         <p class="err"></p>
                     </div>
                     <div class="col-lg-6 col-md-6 mt-2">
-                        <input type="file" class="form-control" id="image" placeholder="Image">
+                        <input type="file" class="form-control" id="image" placeholder="Image" style="box-shadow:none">
+                        <p class="err"></p>
+                    </div>
+                    <div class="col-lg-12">
+                        <textarea id="description" placeholder="Decrivez votre produit" rows="10"></textarea>
                         <p class="err"></p>
                     </div>
                     <div class="col-lg-12 text-center">
@@ -136,4 +140,5 @@
 
 {% block additionnal_javascripts %}
     <script src={{ asset('js/producer.js') }}></script>
+    <script src={{ asset('js/login.js') }}></script>
 {% endblock %}
