--- a/templates/producer/products.html.twig
+++ b/templates/producer/products.html.twig
@@ -71,7 +71,7 @@
     <section class="product spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-5">
+                <div class="col-lg-3 col-md-3">
                     <div class="sidebar">
                         <div class="sidebar__item">
                             <h4>Catégories</h4>
@@ -129,21 +129,21 @@
                     </div>
                     <div class="row">
                         {% if products %}
+                            {% for product in products %}
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="product__item">
-                                <div class="product__item__pic set-bg" data-setbg={{ asset('img/product/product-1.jpg') }}>
+                                <div class="product__item__pic set-bg" data-setbg={{ asset(product.image) }}>
                                     <ul class="product__item__pic__hover">
-                                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                                        <li><a href="/producer/product-details/{{product.id}}"><i class="fa fa-plus"></i></a></li>
                                     </ul>
                                 </div>
                                 <div class="product__item__text">
-                                    <h6><a href="#">Crab Pool Security</a></h6>
-                                    <h5>$30.00</h5>
+                                    <h6><a href="/producer/product-details/{{product.id}}">{{ product.name }}</a></h6>
+                                    <h5>{{ product.price }} FCFA</h5>
                                 </div>
                             </div>
                         </div>
+                            {% endfor %}
                         {% endif %}
                     </div>
                     <div class="product__pagination">
